2017-08-02 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Code cleaning 
2017-08-01 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Added logging functionality 
2017-07-31 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Fixed config file read functionality 
2017-07-28 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Added syslog messages 
2017-07-27 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Changed src directory to server directory 
2017-07-27 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Fixed getopt functionality in main.c 
2017-07-25 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Added SIGHUP functionality 
2017-07-23 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Added some debugging strings
2017-07-19 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Added daemonize functionality
2017-07-16 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Initiating.