@@ -1,30 +1,30 @@
 /* libaudit.h -- 
- *  This file contains the contents of segatex-ng.
- *
- * Copyright 2004-2017 Red Hat Inc., Durham, North Carolina.
- * Copyright(C) Shintaro Fujiwara
- *
- * All Rights Reserved.
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
- * 
- * Authors:
- *	Steve Grubb <sgrubb@redhat.com>
- *	Rickard E. (Rik) Faith <faith@redhat.com>
- *	Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
+   This file contains the contents of segatex-ng.
+ 
+  Copyright 2004-2017 Red Hat Inc., Durham, North Carolina.
+  Copyright(C) Shintaro Fujiwara
+  All Rights Reserved.
+ 
+  This library is free software; you can redistribute it and/or
+  modify it under the terms of the GNU Lesser General Public
+  License as published by the Free Software Foundation; either
+  version 2.1 of the License, or (at your option) any later version.
+ 
+  This library is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+  Lesser General Public License for more details.
+ 
+  You should have received a copy of the GNU Lesser General Public
+  License along with this library; if not, write to the Free Software
+  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+  
+  Authors:
+ 	Steve Grubb <sgrubb@redhat.com>
+ 	Rickard E. (Rik) Faith <faith@redhat.com>
+ 	Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
  */
+
 #ifndef SEGATEXD__LIBSEGATEX_H_
 #define SEGATEXD__LIBSEGATEX_H_
 
