@@ -2,6 +2,7 @@ changes from 0.1.4 to 0.1.5
 ---------------------------
 * Added logging functionality 
 * Code cleaning 
+* Fixed properly handle SIGINT  
 
 changes from 0.1.3 to 0.1.4
 ---------------------------
